Minor styling tweaks

--- a/children.html
+++ b/children.html
@@ -93,7 +93,7 @@
     </table>
 
     <footer>
-        <p><i class="fa fa-twitter"></i>TejayWhite</p>
+        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
 </body>
 </html>
