--- a/flexbox.html
+++ b/flexbox.html
@@ -56,11 +56,10 @@
                 <img src="thumb/ba400.jpg" alt="Page from a British Airways learning module">
             </a>   
         </li>
-    </ul>
-        
+    </ul>        
   
     <footer>
-        <p><i class="fa fa-twitter"></i>TejayWhite</p>
+       <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
 </body>
 </html>
