--- a/font-awesome.html
+++ b/font-awesome.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="collapse"/> 
         <label for="collapse"></label>
         <ul>
-            <li><i class="fa fa-home"></i> <a href="flexbox.html">Home</a></li> 
+            <li><i class="fa fa-home"></i> <a href="index.html">Home</a></li> 
             <li><i class="fa fa-object-group"></i> <a href="flexbox.html">Flexbox</a></li>
             <li><i class="fa fa-table"></i>  <a href="children.html">Children</a></li>
             <li><i class="fa fa-font-awesome"></i> <a href="font-awesome.html" id="contact">Font Awesome</a></li>
@@ -37,7 +37,7 @@
     </ol>
       
     <footer>
-        <p><i class="fa fa-twitter"></i>TejayWhite</p>
+        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
 </body>
 </html>
