--- a/resources.html
+++ b/resources.html
@@ -43,7 +43,7 @@
     <p><a href="http://webaim.org/resources/contrastchecker/" title="WEB AIM colour contrast checker">WEBAIM colour contrast checker</a><p>
 
     <footer>
-        <p><i class="fa fa-twitter"></i>TejayWhite</p>
+        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
 </body>
 </html>
