Fix page border and font weights
some text amendments

--- a/font-awesome.html
+++ b/font-awesome.html
@@ -5,7 +5,7 @@
 	<title>Beyond Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://use.fontawesome.com/f30aab425d.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,31 +13,36 @@
         <input type="checkbox" id="collapse"/> 
         <label for="collapse"></label>
         <ul>
-            <li><i class="fa fa-home"></i> <a href="index.html">Home</a></li> 
-            <li><i class="fa fa-object-group"></i> <a href="flexbox.html">Flexbox</a></li>
-            <li><i class="fa fa-table"></i>  <a href="children.html">Children</a></li>
-            <li><i class="fa fa-font-awesome"></i> <a href="font-awesome.html" id="contact">Font Awesome</a></li>
-            <li><i class="fa fa-file-code-o"></i> <a href="resources.html" id="contact">Resources</a></li>
+            <li><!--<span class="fa fa-home"></span> --> <a href="index.html">Home</a></li> 
+            <li><!--<span class="fa fa-object-group"></span> --> <a href="flexbox.html">Flexbox</a></li>
+            <li><!--<span class="fa fa-table"></span> --> <a href="children.html">Children</a></li>
+            <li class="selected"><!--<span class="fa fa-font-awesome"></span> --> <a href="font-awesome.html" id="contact">Font Awesome</a></li>
+            <li><!-- <span class="fa fa-file-code-o"></span> --> <a href="resources.html" id="contact">Resources</a></li>
         </ul>
     </nav>
 
     <h1>Font Awesome</h1>
-    <h2 class="tagline">Vector graphics that scale nicely</h2>
+    <h2>Vector graphics that scale nicely</h2>
     <p>No drawing skills or images required.</p>
 	
 	<ol>
-        <li>Go to <a href="http://fontawesome.io/get-started/" title ="Get started with Font Awesome"><strong>http://fontawesome.io/get-started/</strong></a> and submit your email address</li>
+        <li>Go to <a href="http://fontawesome.io/get-started/" title ="Get started with Font Awesome">http://fontawesome.io/get-started/</a> and submit your email address</li>
         <li>Add the CDN JS link from your email into the &lt;head&gt;</li>
         <li>Add the icon link to the html: e.g. &lt;i class="fa fa-home"&gt;&lt;/i&gt; Refer to:
-            <ul><li><a href="http://fontawesome.io/examples/" title ="Font Awesome examples"><strong>http://fontawesome.io/examples/ </strong></a> for examples of how to use</li>
-                <li><a href="http://fontawesome.io/icons/" title="Font Awesome icons list"><strong>http://fontawesome.io/icons/</strong></a> for the list of icons</li>
+            <ul><li><a href="http://fontawesome.io/examples/" title ="Font Awesome examples">http://fontawesome.io/examples/ </a> for examples of how to use</li>
+                <li><a href="http://fontawesome.io/icons/" title="Font Awesome icons list">http://fontawesome.io/icons/</a> for the list of icons</li>
             </ul>
         </li>
         <li>Set the color and spacing of the icon in the stylesheet using .fa or individual icon class names</li>
     </ol>
       
     <footer>
-        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
+        <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
+
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 </html>
