--- a/children.html
+++ b/children.html
@@ -5,7 +5,7 @@
 	<title>Beyond Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://use.fontawesome.com/f30aab425d.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,14 +15,14 @@
         <ul>
             <li><a href="index.html">Home</a></li> 
             <li> <a href="flexbox.html">Flexbox</a></li>
-            <li> <a href="children.html">Children</a></li>
+            <li class="selected"> <a href="children.html">Children</a></li>
             <li><a href="font-awesome.html">Font Awesome</a></li>
             <li> <a href="resources.html">Resources</a></li>
         </ul>
     </nav>
 
-    <h1>Targetting Children</h1>
-    <h2 class="tagline">Striped tables</h2>
+    <h1>Selecting Child Elements</h1>
+    <h2>Striped Tables Example</h2>
     <p>Pure CSS using nth-child(even)</p>	
         
     <table class="table">
@@ -93,7 +93,12 @@
     </table>
 
     <footer>
-        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
+        <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
+
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 </html>
