--- a/flexbox.html
+++ b/flexbox.html
@@ -5,7 +5,7 @@
 	<title>Beyond Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://use.fontawesome.com/f30aab425d.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,16 +14,16 @@
         <label for="collapse"></label>
         <ul>
             <li><a href="index.html">Home</a></li> 
-            <li> <a href="flexbox.html">Flexbox</a></li>
-            <li> <a href="children.html">Children</a></li>
+            <li class="selected"><a href="flexbox.html">Flexbox</a></li>
+            <li><a href="children.html">Children</a></li>
             <li><a href="font-awesome.html">Font Awesome</a></li>
-            <li> <a href="resources.html">Resources</a></li>
+            <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
 
     <h1>Flexbox</h1>
-    <h2>Responsive Image Gallery</h2>
-    <p>No media queries or javascript needed</p>
+    <h2>Responsive Image Gallery Example</h2>
+    <p>No media queries or JavaScript needed. NB Grid should be used for large scale layouts.</p>
 	
 	<ul class="flex-container center wrap">   <!-- flex-start flex-end center space-between space-around -->  
         <li class="flex-item">
@@ -59,7 +59,12 @@
     </ul>        
   
     <footer>
-       <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
+       <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
+
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 </html>
