--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 	<title>Beyond Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://use.fontawesome.com/f30aab425d.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="home">
+
     <nav>
         <input type="checkbox" id="collapse"/> 
         <label for="collapse"></label>
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li class="selected"><a href="index.html">Home</a></li> 
             <li><a href="flexbox.html">Flexbox</a></li>
-            <li> <a href="children.html">Children</a></li>
+            <li><a href="children.html">Children</a></li>
             <li><a href="font-awesome.html" id="contact">Font Awesome</a></li>
             <li><a href="resources.html" id="contact">Resources</a></li>
         </ul>
@@ -28,7 +29,12 @@
     <p> Get the files: <a href="https://twhite888.github.io" title="Beyond Bootstrap on Github">https://twhite888.github.io</a></p>
 
     <footer>
-        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
+        <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
+
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 </html>
