--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
 	<title>Beyond Bootstrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://use.fontawesome.com/f30aab425d.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <li> <a href="flexbox.html">Flexbox</a></li>
             <li> <a href="children.html">Children</a></li>
             <li><a href="font-awesome.html">Font Awesome</a></li>
-            <li> <a href="resources.html">Resources</a></li>
+            <li class="selected"> <a href="resources.html">Resources</a></li>
         </ul>
     </nav>
 
@@ -43,7 +43,12 @@
     <p><a href="http://webaim.org/resources/contrastchecker/" title="WEB AIM colour contrast checker">WEBAIM colour contrast checker</a><p>
 
     <footer>
-        <p><i class="fa fa-twitter"></i><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
+        <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
+
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
 </body>
 </html>
