adapted content for 800px screen
In case projector is small. Added additional resource

--- a/flexbox.html
+++ b/flexbox.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:light, regular, bold" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="flexboxpg">
     <nav>
         <input type="checkbox" id="collapse"/> 
         <label for="collapse"></label>
