--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
     </nav>
 
     <h1>Resources</h1>
-    <h2>Things what I stole and further reading</h2>
+    <h2>Things I borrowed and further reading</h2>
     <h3>Flexbox</h3>
 	<p><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" title="A guide to Flexbox">A Guide to Flexbox</a>
 	<p><a href="http://codepen.io/HugoGiraudel/pen/78ff5df52ed01753c1ea29c8805a3ca2" title="Flexbox justify content demo">Flexbox justify content demo</a></p>
@@ -36,7 +36,12 @@
     <p><a href="http://codepen.io/joaorafaelm/pen/pbjfi" title="Pure CSS collapse menu">Pure CSS collapse menu</a></p>
 
     <h3>Nth-Child</h3>
-    <p><a href="https://css-tricks.com/useful-nth-child-recipies/" title="Useful Nth-Child Recipes">Useful Nth-child recipes</a>
+    <p><a href="https://css-tricks.com/useful-nth-child-recipies/" title="Useful Nth-Child Recipes">Useful Nth-child recipes</a></p>
+
+
+    <h3>Responsive Table</h3>
+    <p>(Not used on this site)</p>
+    <p><a href="http://codepen.io/dprantzalos/details/ojabgO" title="Alternative to Bootstrap Responsive Tables">Alternative to Bootstrap responsive tables</a></p>
 
     <h3>General</h3>
     <p><a href="http://caniuse.com/" title="Can I Use browser compatibility checker">Can I use, browser compatibility checker</a></p>
