added secret getaways

--- a/font-awesome.html
+++ b/font-awesome.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="collapse"/> 
         <label for="collapse"></label>
         <ul>
-            <li><!--<span class="fa fa-home"></span> --> <a href="index.html">Home</a></li> 
+            <li><span class="fa fa-home"></span> <a href="index.html">Home</a></li> 
             <li><!--<span class="fa fa-object-group"></span> --> <a href="flexbox.html">Flexbox</a></li>
             <li><!--<span class="fa fa-table"></span> --> <a href="children.html">Children</a></li>
             <li class="selected"><!--<span class="fa fa-font-awesome"></span> --> <a href="font-awesome.html" id="contact">Font Awesome</a></li>
