--- a/children.html
+++ b/children.html
@@ -80,6 +80,8 @@
         </tbody>
     </table>
 
+    <p class="addon">(See also last child on menu and nth-child menu colours)
+
     <footer>
         <p><span class="fa fa-twitter"></span><a href="https://twitter.com/TejayWhite" title="Tejay White Twitter">TejayWhite</a></p>
     </footer>
