--- a/feel the magic/index.html
+++ b/feel the magic/index.html
@@ -11,7 +11,7 @@
       <h2>Discover your own world</h2>
   </header>
   <div class="go">
-    <a href="embed.html" title="Discover">
+    <a href="embeds.html" title="Discover">
       <img src="images/navigation.png" alt="Go">
     </a>
   </div>
